--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.9",
+        "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
   }
